# PointPaintingNode

./: .gitignore  paste.txt
src/: README.md
src/pcd/: CMakeLists.txt  package.xml
src/pcd/msg/: DetectedObject.msg
src/pcd/scripts/PointPainting/: .gitignore
src/pcd/scripts/PointPainting/detector/: .gitignore
src/pcd/scripts/PointPainting/detector/output/kitti_models/pointpillar_painted/default/: log_train_20220909-000755.txt  log_train_20220909-001825.txt
src/pcd/scripts/PointPainting/detector/output/kitti_models/pointpillar_painted/default/eval/eval_with_train/: eval_list_val.txt
src/pcd/scripts/PointPainting/detector/output/kitti_models/pointpillar_painted/default/eval/eval_with_train/tensorboard_val/: events.out.tfevents.1662730879.0019143280bc
src/pcd/scripts/PointPainting/detector/output/kitti_models/pointpillar_painted/default/tensorboard/: events.out.tfevents.1662696475.0019143280bc
src/pcd/scripts/PointPainting/detector/pcdet/models/detectors/: detector3d_template.py
src/pcd/scripts/PointPainting/detector/tools/: 20220912_071517_test.txt  PointPaintingNode.py  calib.txt  demo.py  my_demo.py  my_demo.sh  offlineDetector.py  output.txt
src/pcd/scripts/PointPainting/detector/tools/visual_utils/: visualize_utils.py
src/pcd/scripts/PointPainting/painting/: my_painting.py  my_painting_offline.py  painting.py
